<resources>
    <string-array name="periods">
        <item>Quarterly</item>
        <item>Annually</item>
    </string-array>
    <string-array name="probability">
        <item>90%</item>
        <item>75%</item>
        <item>50%</item>
        <item>25%</item>
        <item>15%</item>
        <item>10%</item>
        <item>0%</item>
    </string-array>
    <string-array name="probability_status">
        <item>Qualified</item>
        <item>Quote submitted</item>
        <item>Closed</item>
        <item>Cancelled</item>
        <item>Lose</item>
        <item>Won</item>
    </string-array>
    <string name="Notification">Notification</string>
    <string name="TodayTask">You have 2 Tasks Today</string>
    <string name="MeetingTask">You have 1 Meetings Today</string>
    <string name="OtherEmailLabel">Other Email</string>
    <string name="optin">Allow MLeads platform to send product and other updates</string>
    <string name="jobtitle">Job Title</string>
    <string name="badgeprint">Badge Entry \nCheck</string>
    <string name="smstoall">Messaging to All</string>
    <string name="sharelead">Share \nLeads</string>
    <string name="b_social">BeSocial</string>
    <string name="selectteammember">Select Team \nMember</string>
    <string name="otheremailtext">Other Email</string>
    <string name="quicknote">Quick Note</string>
    <string name="quickrecord">Quick Record</string>
    <string name="showmap">Show Map</string>
    <string name="load_more">Load More</string>
    <string name="load_more_msg">Sorry, no more event for </string>
    <string name="messaging_all_validation_msg">Please select at least one lead name.</string>
    <string-array name="currency">
        <item>Albania (ALL)</item>
        <item>Afghanistan (AFN)</item>
        <item>Argentina (ARS)</item>
        <item>Aruba (AWG)</item>
        <item>Australia (AUD)</item>
        <item>Azerbaijan (AZN)</item>
        <item>Bahamas (BSD)</item>
        <item>Barbados (BBD)</item>
        <item>Belarus (BYR)</item>
        <item>Belize (BZD)</item>
        <item>Bermuda (BMD)</item>
        <item>Bolivia (BOB)</item>
        <item>Bosnia and Herzegovina (BAM)</item>
        <item>Botswana (BWP)</item>
        <item>Bulgaria (BGN)</item>
        <item>Brazil (BRL)</item>
        <item>Brunei (BND)</item>
        <item>Cambodia (KHR)</item>
        <item>Canada (CAD)</item>
        <item>Cayman (KYD)</item>
        <item>Chile (CLP)</item>
        <item>China (CNY)</item>
        <item>Colombia (COP)</item>
        <item>Costa Rica (CRC)</item>
        <item>Croatia (HRK)</item>
        <item>Cuba (CUP)</item>
        <item>Czech Republic (CZK)</item>
        <item>Denmark (DKK)</item>
        <item>Dominican Republic (DOP)</item>
        <item>East Caribbean (XCD)</item>
        <item>Egypt (EGP)</item>
        <item>El Salvador (SVC)</item>
        <item>Estonia (EEK)</item>
        <item>Euro Member (EUR)</item>
        <item>Falkland Islands (FKP)</item>
        <item>Fiji (FJD)</item>
        <item>Ghana (GHC)</item>
        <item>Gibraltar (GIP)</item>
        <item>Guatemala (GTQ)</item>
        <item>Guernsey (GGP)</item>
        <item>Guyana (GYD)</item>
        <item>Honduras (HNL)</item>
        <item>Hong Kong (HKD)</item>
        <item>Hungary (HUF)</item>
        <item>Iceland (ISK)</item>
        <item>India (INR)</item>
        <item>Indonesia (IDR)</item>
        <item>Iran (IRR)</item>
        <item>Isle of Man (IMP)</item>
        <item>Israel (ILS)</item>
        <item>Jamaica (JMD)</item>
        <item>Japan (JPY)</item>
        <item>Jersey (JEP)</item>
        <item>Kazakhstan (KZT)</item>
        <item>Korea (North) (KPW)</item>
        <item>Korea (South) (KRW)</item>
        <item>Kyrgyzstan (KGS)</item>
        <item>Laos (LAK)</item>
        <item>Latvia (LVL)</item>
        <item>Lebanon (LBP)</item>
        <item>Liberia (LRD)</item>
        <item>Lithuania (LTL)</item>
        <item>Macedonia (MKD)</item>
        <item>Malaysia (MYR)</item>
        <item>Mauritius (MUR)</item>
        <item>Mexico (MXN)</item>
        <item>Mongolia (MNT)</item>
        <item>Mozambique (MZN)</item>
        <item>Namibia (NAD)</item>
        <item>Nepal (NPR)</item>
        <item>Netherlands (ANG)</item>
        <item>New Zealand (NZD)</item>
        <item>Nicaragua (NIO)</item>
        <item>Nigeria (NGN)</item>
        <item>Norway (NOK)</item>
        <item>Oman (OMR)</item>
        <item>Pakistan (PKR)</item>
        <item>Panama (PAB)</item>
        <item>Paraguay (PYG)</item>
        <item>Peru (PEN)</item>
        <item>Philippines (PHP)</item>
        <item>Poland (PLN)</item>
        <item>Qatar (QAR)</item>
        <item>Romania (RON)</item>
        <item>Russia (RUB)</item>
        <item>Saint Helena (SHP)</item>
        <item>Saudi Arabia (SAR)</item>
        <item>Serbia (RSD)</item>
        <item>Seychelles (SCR)</item>
        <item>Singapore (SGD)</item>
        <item>Solomon Islands (SBD)</item>
        <item>Somalia (SOS)</item>
        <item>South Africa (ZAR)</item>
        <item>Sri Lanka (LKR)</item>
        <item>Sweden (SEK)</item>
        <item>Switzerland (CHF)</item>
        <item>Suriname (SRD)</item>
        <item>Syria (SYP)</item>
        <item>Taiwan (TWD)</item>
        <item>Thailand (THB)</item>
        <item>Trinidad and Tobago (TTD)</item>
        <item>Turkey (TRL)</item>
        <item>Tuvalu (TVD)</item>
        <item>Ukraine (UAH)</item>
        <item>United Kingdom (GBP)</item>
        <item>United States (USD)</item>
        <item>Uruguay (UYU)</item>
        <item>Uzbekistan (UZS)</item>
        <item>Venezuela (VEF)</item>
        <item>Viet Nam (VND)</item>
        <item>Yemen (YER)</item>
        <item>Zimbabwe (ZWD)</item>
    </string-array>
    <string name="sponsorsclick">No. of clicks for \n sponsor by Event</string>
    <string name="generateReport">Generate Report</string>
    <string name="sponsorsname">Sponsor</string>
    <string name="select_team_member_PromptMessage">Select Team Member</string>
    <string name="select_team_member">Team Member</string>
    <string name="newTutorialBottom">Thank you for using the MLeads, and start capturing the leads to grow opportunities and sales, The MLeads Way!\n\nPlease refer MLeads to your friends and provide us your valuable feedback to improve the features.</string>
    <string name="newstep5">STEP 5: Review statistical reports across your team. Export the leads data into .CSV format to later import into your existing external systems!</string>
    <string name="newstep4">STEP 4: Perform One-Click Research and Follow-up actions with your leads\n-- send email using predefined Email message templates, make a phone call, send text message, schedule outlook meeting, schedule tasks, research lead\'s information on Linked-In, Google, Maps, Website etc. in seconds...</string>
    <string name="newstep3">STEP 3: Capture leads information during or after the event using MLeads. MLeads offers 7 quick ways to capture leads. You can import leads from any source (e.g. address book, Yahoo, Gmail, .CSV file etc.)</string>
    <string name="newstep2">STEP 2: Create predefined follow-up email message templates, with message text representing different products or services your business offers.</string>
    <string name="newstep1">STEP 1: Enter the information about the event you are going to attend or the Lead Group to track your leads.</string>
    <string name="newsteps_follow">Thank you for registering with MLeads, a comprehensive platform for Events and Leads management to grow your business!\n\nPlease follow Simple 5 Steps to start using MLeads:</string>
    <string name="guidelinesContinue">Continue</string>
    <string name="tutorial_setting">Go to Settings</string>
    <string name="getstarted"> Get Started </string>
    <string name="MoreInfo">How it works?</string>
    <string name="tutorialLink">MLeads Video Link</string>
    <string name="mleadstutorial">MLeads Quick Tutorial</string>
    <string name="button_cancel">Cancel</string>
    <string name="BackButtonLabel"> Back  </string>
    <string name="SaveButtonLabel"> Save  </string>
    <string name="Button_Rate_mlites">Rate MobileleadsLite</string>
    <string name="Button_Upgrade_Enterprise">Upgrade to MLeads Enterprise</string>
    <string name="Checkbox_Upgrade">Do not show again</string>
    <string name="Upgrade_Title">MLeads Edition</string>
    <string name="Upgrade_text">Do you enjoy using MLeads Lite App? Please upgrade to Mobileleads Enterprise or Rate this App.</string>
    <string name="Button_skip">Skip</string>
    <string name="SelectEvent_OR_Group_Label">Event or Group</string>
    <string name="Select_new_Event_OR_Group_Label">Select Event or Group</string>
    <string name="guidlines_details">Guidelines for Importing Attendees from .CSV file</string>
    <string name="guidlines_note">Note: .CSV file will be imported with predefined sample format only.</string>
    <string name="steps_title">Steps to save .CSV file with sample format:</string>
    <string name="step_1">Step 1:  Connect your mobile device to a computer.  In SD card of your device, go to sdcard -> MLeads folder</string>
    <string name="step_2">Step 2: From MLeads Folder list, select “Import_Attendees_Sample.csv” file, and save it on your laptop or desktop folder.</string>
    <string name="step_3">Step 3:  Add your attendees information into the file according to the format defined in the sample file. After you done enter the attendees information, please save the file under a different name.</string>
    <string name="step_4">Step 4:  Drag and drop the file which you just created with your data into “MLeads” Folder List.</string>
    <string name="step_5">Step 5:  Now go back to the MLeads application on your device and import the attendees information using your .csv file.</string>
    <string name="sponsor_label">Sponsor</string>
</resources>