<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffff"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/Upgrade_Title"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo1" />

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textDetail"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/mleadstutorial"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textDetail2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/newsteps_follow"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textDetail3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/newstep1"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textDetail4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/newstep2"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textDetail5"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/newstep3"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textDetail6"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/newstep4"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textDetail7"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/newstep5"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textDetail8"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/newTutorialBottom"
                    android:textColor="@color/black" />

                <CheckBox
                    android:id="@+id/checkboxTutorial"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="50dp"
                    android:text="@string/Checkbox_Upgrade"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/btnMoreInfo"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                     android:textColor="#fff" 
                    android:background="@drawable/neweightattachmentbtn"
                    android:text="@string/MoreInfo" />

                <Button
                    android:id="@+id/bntVideoLink"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                     android:textColor="#fff" 
                    android:background="@drawable/neweightattachmentbtn"
                    android:text="@string/tutorialLink" />

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/btnSettings"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|left"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/neweightattachmentbtn"
                        android:text="@string/tutorial_setting"
                        android:textColor="#fff" />

                    <Button
                        android:id="@+id/btnNext"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|right"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/neweightattachmentbtn"
                        android:text="@string/getstarted"
                        android:textColor="#fff" />
                </FrameLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>