<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:background="@drawable/neweightfooter" >

        <LinearLayout
            android:layout_width="45dp"
            android:layout_height="58dp"
            android:layout_gravity="center|right"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/BackButton"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center|right"
                android:layout_marginLeft="2dip"
                android:background="@drawable/neweightback_l"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BackButtonLabel"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="#fff"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_pg_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_toRightOf="@+id/BackButton"
            android:gravity="center"
            android:maxWidth="180dp"
            android:text="@string/sponsorsclick"
            android:textColor="#fff"
            android:textSize="17dp"
            android:textStyle="bold" >

        </TextView>
        <!--android:text=""  -->

        <ImageView
            android:id="@+id/AddEventButton"
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="right|center"
            android:layout_marginRight="8dp"
            android:src="@drawable/add"
            android:text="@string/SaveButtonLabel"
            android:textColor="#FFFFFF"
            android:visibility="gone"
             />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_marginTop="2dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/txt_userTitle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="left"
            android:text="@string/select_team_member"
            android:textColor="#000000" >
        </TextView>

        <Spinner
            android:id="@+id/spnrUser"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/select_team_member_PromptMessage" >
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearWithin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_marginTop="2dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="left"
            android:text="@string/SelectEvent_OR_Group_Label"
            android:textColor="#000000" >
        </TextView>

        <Spinner
            android:id="@+id/eventsWithins"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/Select_new_Event_OR_Group_Label" >
        </Spinner>
    </LinearLayout>
    
      <LinearLayout
        android:id="@+id/linearWithin2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_marginTop="2dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/txt_sponosors_title"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="left"
            android:text="@string/sponsor_label"
            android:textColor="#000000" >
        </TextView>

        <Spinner
            android:id="@+id/SponsorNameSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/sponsorsname" >
        </Spinner>
    </LinearLayout> 
    
      <Button
            android:id="@+id/GenerateReport"
            android:layout_width="150dip"
            android:layout_height="35dip"
            android:layout_gravity="center"
            android:textSize="14dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="2dip"
            android:background="@drawable/neweightattachmentbtn"
            android:gravity="center"
            android:text="@string/generateReport"
            android:textColor="#FFFFFF" />
    
    </LinearLayout>
    