<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#fff"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/Upgrade_Title"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo1" />

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textDetail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/guidlines_details"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textDetail2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/guidlines_note"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textDetail3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/steps_title"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textDetail4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/step_1"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textDetail5"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/step_2"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textDetail6"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/step_3"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textDetail7"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/step_4"
                    android:textColor="@color/black" />
                
                <TextView
                    android:id="@+id/textDetail8"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/step_5"
                    android:textColor="@color/black" />

                <!--
       <TextView
    	android:id="@+id/textDetail"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	
    	android:layout_marginLeft="5dp"
    	android:layout_marginRight="5dp"
    	android:layout_marginTop="5dp"
    	android:text="@string/thankulabel"
    	android:textColor="@color/black"
    	/>
                -->

                <CheckBox
                    android:id="@+id/checkboxTutorial"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="50dp"
                    android:text="@string/Checkbox_Upgrade"
                    android:textColor="@color/black" />

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/btnSettings"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|left"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/neweightattachmentbtn"
                        android:text="@string/button_cancel"
                        android:textColor="#fff" />

                    <Button
                        android:id="@+id/btncontinue"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|right"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/neweightattachmentbtn"
                        android:text="@string/guidelinesContinue"
                        android:textColor="#fff" />
                </FrameLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>